# RealtimeRaytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  readme.md  run.sh
RayTracer/: CMakeLists.txt  FocalPoint.cpp  FocalPoint.h  PixelPos.cpp  PixelPos.h  Ray.h  Triangle.h  Vector.cpp  Vector.h  main.cpp
include/: Action.h  Benchmark.cpp  Benchmark.h  BoundingBox.h  BoundingBoxes.h  Camera.cpp  Camera.h  Canvas.h  Color.h  ColorTexture.h  Config.h  GraphicalObject.cpp  GraphicalObject.h  IBoundable.h  IIntersectable.h  Input.h  Light.h  Logger.h  Material.h  Matrix.h  MyTime.h  Object.h  ObjectParser.h  PixelDisplayer.h  Ray.h  Raytracer.h  SDLDisplayer.h  SDL_runner.h  Scene.h  SceneParser.h  Screen.h  ScreenMatrix.h  SimpleGraphicalObject.cpp  SimpleGraphicalObject.h  Square.cpp  Square.h  Texture.h  Triangle.h  Utils.h  Vec3.h
include/BVH/: BVHBuilder.h  BVHNode.h  BoundingBoxes.h
include/Math/: Color.h  MathExtensions.h  Matrix.h  Vec2.h  Vec2Int.h  Vec3.h  glmExtension.h  mathExtensions.h
include/Object/: Camera.h  ExtendedVertice.h  GraphicalObject.h  Light.h  Object.h  PolyMesh.h  Triangle.h  Vertex.h
include/ObjectAppearance/: Color.h  Material.h  Texture.h
include/OpenGL/: BufferController.h  GLObject.h  RaytracerShader.h  Shader.h  glad.h
include/Parsers/: ObjectParser.h  SceneParser.h
include/Physics/: Physics.h
include/Raycast/: Ray.h  Raycast.h  Triangle.h
include/UI/: Canvas.h  Input.h  SDLDisplayer.h  SDLHandler.h
include/Vector/: Color.h  Vec2.h  Vec2Int.h  Vec3.h
scenes/: redGreenRoom  scene1.json
shaders/: myshader.hlsl  raytracer.frag  screen.frag  screen.vert
src/: Benchmark.cpp  BoundingBox.cpp  BoundingBoxes.cpp  Camera.cpp  Canvas.cpp  ColorTexture.cpp  Input.cpp  InputManager.cpp  Light.cpp  Logger.cpp  Material.cpp  MyTime.cpp  ObjectParser.cpp  PixelDisplayer.cpp  Ray.cpp  Raytracer.cpp  SDLDisplayer.cpp  SDL_runner.cpp  Scene.cpp  SceneParser.cpp  Screen.cpp  Texture.cpp  Triangle.cpp  Utils.cpp  Vec3.cpp  main.cpp
src/BVH/: BVHBuilder.cpp  BVHNode.cpp  BoundingBoxes.cpp
src/Math/: Vec2.cpp  Vec2Int.cpp  Vec3.cpp
src/Object/: Camera.cpp  GraphicalObject.cpp  Light.cpp  Object.cpp  ObjectParser.cpp  PolyMesh.cpp  Triangle.cpp
src/ObjectAppearance/: Material.cpp  Texture.cpp
src/OpenGL/: BufferController.cpp  GLObject.cpp  RaytracerShader.cpp  Shader.cpp  glad.c
src/Parsers/: ObjectParser.cpp  SceneParser.cpp
src/Physics/: Physics.cpp
src/Ray/: Ray.cpp  Raycast.cpp
src/UI/: Canvas.cpp  SDLDisplayer.cpp  SDLHandler.cpp
src/Vector/: Vec2.cpp  Vec2Int.cpp  Vec3.cpp
